http://bugzilla.gnome.org/show_bug.cgi?id=171025 Add some cell_eval calls,

2005-05-29  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=171025
	* solver.c (lp_qp_solver_init) : Add some cell_eval calls,
	  and use the correct base for mapping constraints.
	* reports.c (solver_prepare_reports_success) : rhs is stored in the
	  initialization.